2010-02-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSOperation.h:
	* Source/NSOperation.m:
	Partial implementation of NSOperationQueue (OSX Leopard functionality
	plus a little of Snow Leopard).

2010-02-05 Riccardo Mottola <rmottola@users.sf.net>

	* Headers/Additions/GNUstepBase/GSIMap.h: fixed c99-ism
	* Headers/Additions/GNUstepBase/GSBlocks.h : provide gcc 2.95
	variadic macro
	
2010-02-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSOperation.h:
	* Source/NSOperation.m:
	Implement and document the NSOperation class.
	As OSX 10.6 minus the objc2 specific 'block' methods.

2010-02-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLock.m: cleanup indentation etc, and apply fix suggested
	by David Ayers

2010-02-04 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* Source/NSLock.m: 
	lockWhenCondition:beforeDate: 
	  Switched to use timeIntervalSince1970. 
	  added a loop to lockWhenCondition since pthread_cond_timedwait can return 
	  to delay expiring. Hold the lock on a delayed acquire (and YES return).
	tryLockWhenCondition: 
	  No longer reports a deadlock when we already have the lock, now just returns NO.

2010-02-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m:
	Don't use usleep() on windows .. it performas a busy wait so the
	Sleep() function is better.

2010-02-01 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAutoreleasePool.m:
	* Source/NSThread.m:
	Tweaks to try and get default thread correctly terminated on exit.

2010-01-30  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPropertyList.m (GSBinaryPLParser -rootObject,
	-initWithData:mutability:): Get root index from the binary
	property list data and use this to return the root object.

2010-01-24 Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Option for using libbfd for stack traces
	* configure: regenerate
	* Headers/Additions/GNUstepBase/config.h.in: regenerate